# aimnetcentral

./: .gitignore  pyproject.toml
aimnet/data/: sgdataset.py
examples/: read_h5_test_data.py
tests/nui_soumik/example/: ORCA.py  ORCA_v2.py  process2.py
